# vpaint

./: .gitignore  CMakeLists.txt  COPYING  COPYING.BSD  COPYRIGHT  LICENSE  LICENSE.MIT  LICENSE.md  README.md  VPaint.pro  update_copyright.py  vpaint.pro
app/: AboutDialog.h  CssStyle.cpp  CssStyle.h  EditCanvasSizeDialog.h  GLWidget_Camera.h  GLWidget_Camera2D.h  GLWidget_Material.h  GeometryUtils.h  Global.cpp  Global.h  MainWindow.cpp  MainWindow.h  MultiView.cpp  ObjectPropertiesWidget.cpp  ObjectPropertiesWidget.h  Picking.h  Random.cpp  SaveAndLoad.h  SelectionInfoWidget.h  SettingsDialog.h  SpinBox.cpp  TimeDef.h  Timeline.cpp  View3D.h  ViewSettings.cpp  XmlStreamWriter.h  app.pro  app.rc
app/VectorAnimationComplex/: Cell.cpp  CellObserver.cpp  CellObserver.h  EdgeCell.h  EdgeGeometry.h  Eigen.h  FaceCell.cpp  Halfedge.h  HalfedgeBase.cpp  InbetweenCell.h  InbetweenFace.cpp  Intersection.cpp  KeyCell.h  KeyFace.cpp  KeyVertex.cpp  KeyVertex.h  Operator.h  Operators.cpp  SmartKeyEdgeSet.h  Triangles.cpp  VertexCell.cpp
configure/: buildutils.py  configure.pri  configure.py
doc/OpenVac/: generatedoc.sh  geometry.dox  gettingstarted.dox  topology.dox
examples/: bird.vec  hullabaloo.vec
examples/vpaint-1.5/: bird.vec  hullabaloo.vec  torus.vec
examples/vpaint-1.6/: torus.vec
lib/GLEW/: glew.c
src/: AboutDialog.cpp  AnimatedCycleWidget.cpp  AnimatedCycleWidget.h  Color.cpp  Color.h  ColorSelector.cpp  CssColor.cpp  EditCanvasSizeDialog.cpp  ExportPngDialog.h  GLUtils.cpp  GLUtils.h  GLWidget.cpp  GLWidget_Camera.h  GLWidget_Light.h  GLWidget_Settings.cpp  GLWidget_Settings.h  GeometryUtils.cpp  GeometryUtils.h  Global.h  KeyFrame.cpp  KeyFrame.h  MainWindow.cpp  MainWindow.h  MultiView.h  OpenGL.h  Picking.cpp  README.md  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SceneObjectVisitor.cpp  SceneObjectVisitor.h  SelectionInfoWidget.cpp  SpinBox.h  Timeline.cpp  Timeline.h  VPaint.pro  View.cpp  View3DSettings.h  (+7 more)
src-bak/: VPaint.pro
src-bak/App/: App.pro  Application.cpp  ColorSelector.h  CssColor.cpp  EditCanvasSizeDialog.h  GLWidget_Material.h  MultiView.cpp  ObjectPropertiesWidget.h  SceneObjectVisitor.cpp  SceneOld.cpp  Settings.cpp  Timeline.h  UpdateCheckDialog.h  View3D.h  main.cpp  (+1 more)
src/Gui/: AboutDialog.cpp  AboutDialog.h  AnimatedCycleWidget.cpp  AnimatedCycleWidget.h  Application.cpp  Application.h  Background.cpp  Background.h  BackgroundData.cpp  BackgroundRenderer.cpp  BackgroundWidget.cpp  BackgroundWidget.h  CMakeLists.txt  Color.cpp  Color.h  ColorSelector.cpp  ColorSelector.h  CssColor.cpp  CssColor.h  CssStyle.cpp  CssStyle.h  DevSettings.cpp  DevSettings.h  EditCanvasSizeDialog.cpp  EditCanvasSizeDialog.h  ExportPngDialog.cpp  ExportPngDialog.h  GLUtils.cpp  GLUtils.h  GLWidget.cpp  GLWidget.h  GLWidget_Camera.h  GLWidget_Camera2D.h  GLWidget_Light.h  GLWidget_Material.h  GLWidget_Settings.cpp  GLWidget_Settings.h  GeometryUtils.cpp  GeometryUtils.h  Global.cpp  (+74 more)
src/Gui/Background/: Background.cpp  Background.h  BackgroundData.cpp  BackgroundData.h  BackgroundRenderer.cpp  BackgroundRenderer.h  BackgroundUrlValidator.cpp  BackgroundUrlValidator.h  BackgroundWidget.cpp  BackgroundWidget.h
src/Gui/IO/: FileVersionConverter.cpp  FileVersionConverter.h  FileVersionConverterDialog.cpp  FileVersionConverterDialog.h  VecVersionConverter.cpp  VecVersionConverter.h  XmlStreamConverter.cpp  XmlStreamConverter.h  XmlStreamTraverser.cpp  XmlStreamTraverser.h
src/Gui/IO/XmlStreamConverters/: XmlStreamConverter_1_0_to_1_6.cpp  XmlStreamConverter_1_0_to_1_6.h
src/Gui/VectorAnimationComplex/: Algorithms.cpp  Algorithms.h  AnimatedCycle.cpp  AnimatedCycle.h  AnimatedVertex.cpp  AnimatedVertex.h  BoundingBox.cpp  BoundingBox.h  Cell.cpp  Cell.h  CellLinkedList.cpp  CellLinkedList.h  CellList.h  CellObserver.cpp  CellObserver.h  CellVisitor.cpp  CellVisitor.h  Cycle.cpp  Cycle.h  CycleHelper.cpp  CycleHelper.h  EdgeCell.cpp  EdgeCell.h  EdgeGeometry.cpp  EdgeGeometry.h  EdgeSample.cpp  EdgeSample.h  Eigen.h  FaceCell.cpp  FaceCell.h  ForwardDeclaration.h  Halfedge.cpp  Halfedge.h  HalfedgeBase.cpp  HalfedgeBase.h  InbetweenCell.cpp  InbetweenCell.h  InbetweenEdge.cpp  InbetweenEdge.h  InbetweenFace.cpp  (+41 more)
src/VAC/: AboutDialog.cpp  AboutDialog.h  AnimatedCycleWidget.cpp  AnimatedCycleWidget.h  CMakeLists.txt  Color.cpp  Color.h  ColorSelector.cpp  ColorSelector.h  CssColor.cpp  CssColor.h  DevSettings.h  EditCanvasSizeDialog.cpp  EditCanvasSizeDialog.h  ExportAsDialog.cpp  ExportAsDialog.h  ExportPngDialog.cpp  ExportPngDialog.h  ExportSettings.cpp  ExportSettings.h  FilePath.cpp  FilePath.h  GLUtils.cpp  GLUtils.h  GLWidget.cpp  GLWidget.h  GLWidget_Camera.h  GLWidget_Camera2D.h  GLWidget_Light.h  GLWidget_Material.h  GeometryUtils.cpp  GeometryUtils.h  Global.cpp  Global.h  KeyFrame.cpp  KeyFrame.h  Layer.cpp  Layer.h  LayersWidget.cpp  LayersWidget.h  (+50 more)
src/VAC/Background/: Background.cpp  Background.h  BackgroundData.cpp  BackgroundData.h  BackgroundRenderer.cpp  BackgroundRenderer.h  BackgroundUrlValidator.cpp  BackgroundUrlValidator.h  BackgroundWidget.cpp  BackgroundWidget.h
src/VAC/IO/: FileVersionConverter.h  FileVersionConverterDialog.cpp  FileVersionConverterDialog.h  XmlStreamConverter.cpp  XmlStreamConverter.h  XmlStreamTraverser.cpp  XmlStreamTraverser.h
src/VAC/IO/XmlStreamConverters/: XmlStreamConverter_1_0_to_1_6.cpp  XmlStreamConverter_1_0_to_1_6.h
src/VAC/VectorAnimationComplex/: Algorithms.cpp  Algorithms.h  AnimatedCycle.cpp  AnimatedCycle.h  AnimatedVertex.cpp  AnimatedVertex.h  BoundingBox.cpp  BoundingBox.h  Cell.cpp  Cell.h  CellLinkedList.cpp  CellLinkedList.h  CellList.h  CellObserver.cpp  CellObserver.h  CellVisitor.cpp  CellVisitor.h  Cycle.cpp  Cycle.h  CycleHelper.cpp  CycleHelper.h  EdgeCell.cpp  EdgeCell.h  EdgeGeometry.cpp  EdgeGeometry.h  EdgeSample.cpp  EdgeSample.h  Eigen.h  FaceCell.cpp  FaceCell.h  ForwardDeclaration.h  Halfedge.h  HalfedgeBase.h  InbetweenCell.cpp  InbetweenCell.h  InbetweenEdge.cpp  InbetweenEdge.h  InbetweenFace.cpp  InbetweenFace.h  InbetweenHalfedge.cpp  (+38 more)
tests/: README.md  tests.pro
(+612 files in other folders)
